Fix some display issue on iPhone

--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -138,7 +138,7 @@
   .youtube-player .product-list-container {
     width: 100%;
     margin-top: 5px;
-    height: 570px;
+    // height: 570px;
     display: flex;
     position: relative;
     // background-color: white;
