--- a/app/assets/stylesheets/tooltip.scss
+++ b/app/assets/stylesheets/tooltip.scss
@@ -52,7 +52,24 @@
     left: 0;
     top: 100%;
     display: flex;
-    justify-content: space-around;
-    width: 80%;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+  }
+  .tooltip h4 {
+    font-size: 14px;
+  }
+  .tooltip .product_thumbnail {
+    margin-right: 10px;
+  }
+  .tooltip .product_picture {
+    height: 80px;
+    width: 80px;
+  }
+  .tooltip .actions {
+    padding: 0;
+  }
+  .tooltip .btn {
+    font-size: 11px
   }
 }
